show completed and incompleted tasks

--- a/todo_list/index.html
+++ b/todo_list/index.html
@@ -11,6 +11,10 @@
 <body>
    <input class="todo_txtBox" placeholder="Task to do">
    <button class="add_btn">Add</button>
+   <p>
+      <button class="completed_task_btn">Show completed tasks</button>
+      <button class="incompleted_task_btn">Show incompleted tasks</button>
+   </p>
    <script src="script.js"></script>
 </body>
 
