color_changer done

--- a/color_changer/index.html
+++ b/color_changer/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-   
+   <button id="colorButton">Change Background Color</button>
+   <p id="hexCode">#FFFFFF</p>
+   <script src="script.js"></script>
 </body>
 
 </html>
