guess_number done

--- a/guess_number/index.html
+++ b/guess_number/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-   
+   <input id="input" placeholder="Type a number from 0 to 100">
+   <button id="check_Btn">Check</button>
+   <p id="result"></p>
    <script src="script.js"></script>
 </body>
 
